<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffff">


    <!-- Row 1 with single column -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:textSize="15dp" android:text="@string/main_title"  android:layout_span="5"
            android:padding="12dip"
            android:textColor="#000" android:gravity="center" />


    </TableRow>


    <!-- Row 3 with 2 columns -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/TextView01"
            android:text="@string/date_pick"
            android:layout_weight="1"

            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_weight="1"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"
            android:entries="@array/country_arrays"/>


    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:textSize="11dp" android:text="Grass Field"  android:layout_span="5"
            android:padding="10dip"
            android:textColor="#000"
            android:id="@+id/textView" android:gravity="center"  />


    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="Time:"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Home"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text=""
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Vistor"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>


    </TableRow>
    <!-- Row 2 with 3 columns -->


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="@string/ccsltime1"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="vs"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="@string/ccsltime2"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="vs"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="@string/ccsltime3"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="vs"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="@string/ccsltime4"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="vs"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

    </TableRow>

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:textSize="11dp" android:text="Turf Field"  android:layout_span="5"
            android:padding="10dip"
            android:textColor="#000"
            android:id="@+id/textView" android:gravity="center" />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="Time:"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Home"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text=""
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Vistor"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>


    </TableRow>
    <!-- Row 2 with 3 columns -->


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="@string/ccsltime1"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="vs"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="@string/ccsltime2"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="vs"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="@string/ccsltime3"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="vs"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView04" android:text="@string/ccsltime4"
            android:layout_weight="1" android:background="#dcdcdc"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#d3d3d3"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

        <TextView
            android:id="@+id/TextView04" android:text="vs"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>
        <TextView
            android:id="@+id/TextView04" android:text="Team"
            android:layout_weight="1" android:background="#cac9c9"
            android:textColor="#000000"
            android:padding="10dip" android:gravity="center"/>

    </TableRow>



</TableLayout>